[gd_scene load_steps=5 format=2]

[ext_resource path="res://gameplay/screen/main/plus.svg" type="Texture" id=1]
[ext_resource path="res://gameplay/screen/main/ship_upgrade/upgrade_feature.gd" type="Script" id=2]
[ext_resource path="res://gameplay/screen/main/minus.svg" type="Texture" id=3]
[ext_resource path="res://fonts/SourceHanSansHW-Regular.16.tres" type="DynamicFont" id=4]

[node name="UpgradeItem" type="HBoxContainer"]
margin_right = 744.0
margin_bottom = 32.0
script = ExtResource( 2 )
max_level = 9
costs = PoolIntArray( 100, 200, 300, 400, 500, 600, 700, 800, 900, 1000 )

[node name="StatusName" type="Label" parent="."]
margin_top = 4.0
margin_right = 80.0
margin_bottom = 28.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = ExtResource( 4 )
valign = 1

[node name="MinusButton" type="Button" parent="."]
margin_left = 84.0
margin_right = 116.0
margin_bottom = 32.0
icon = ExtResource( 3 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 120.0
margin_right = 632.0
margin_bottom = 32.0
rect_min_size = Vector2( 512, 32 )
max_value = 9.0
percent_visible = false

[node name="PlusButton" type="Button" parent="."]
margin_left = 636.0
margin_right = 668.0
margin_bottom = 32.0
icon = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_left = 672.0
margin_right = 704.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 0 )

[node name="Cost" type="Label" parent="."]
margin_left = 708.0
margin_top = 4.0
margin_right = 740.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 4 )
text = "0 pt"

[connection signal="pressed" from="MinusButton" to="." method="_on_MinusButton_pressed"]
[connection signal="pressed" from="PlusButton" to="." method="_on_PlusButton_pressed"]
